CalculatorReader and CalculatorTest were redone using Clean principles